fix(client): modal goes under nav bar on mobile fix(client): last task in task list doesn't show it's shadow

--- a/client/src/components/utilities/TaskList/TaskList.module.scss
+++ b/client/src/components/utilities/TaskList/TaskList.module.scss
@@ -7,7 +7,7 @@
   max-width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 0 10px;
+  padding: 0.5em 10px;
 
   &::-webkit-scrollbar-thumb {
     background-color: var(--background-color);
@@ -21,6 +21,6 @@
 @media (max-width: v.$phone-breakpoint) {
   .leftSide {
     width: 100%;
-    padding: 1em 4px 0 4px;
+    padding: 0.5em 4px 0.5em 4px;
   }
 }
